--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>animals</title>
   </head>
   <body>
-
+    <ul>
+      <li>Lions</li>
+      <li>tigers</li>
+      <li>bears</li>
+      <li>cougars</li>
+      <li>broncos</li>
   </body>
 </html>
