adds h1 over ul

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <title>animals</title>
   </head>
   <body>
+    <h1>Animals from area sports teams</h1>
     <ul>
       <li>Lions</li>
       <li>tigers</li>
       <li>bears</li>
       <li>cougars</li>
       <li>broncos</li>
+    </ul>
   </body>
 </html>
