--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>animals</title>
+    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   </head>
   <body>
     <h1>Animals from area sports teams</h1>
